# gst-plugins-bad

./: configure.ac
gst/webrtc/: Makefile.am  gstcryptopolicy.c  gstcryptopolicy.h  gstsrtpprotect.c  gstsrtpprotect.h  gstsrtpunprotect.c  gstsrtpunprotect.h  gstwebrtc.c  gstwebrtcbin.c  gstwebrtcbin.h
